--- a/src/main/resources/view/HomePage.fxml
+++ b/src/main/resources/view/HomePage.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Controller.HomePageFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.HomePageFormController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7a300dd9" height="81.0" layoutY="51.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
+      <Label layoutX="75.0" layoutY="68.0" text="Cafe Vibe Management System" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="31.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#782f0dd9" height="221.0" layoutX="100.0" layoutY="152.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="404.0" />
+      <Button layoutX="229.0" layoutY="181.0" mnemonicParsing="false" onAction="#btnAddCustomerOnAction" text="Add Customers" textFill="#7a300d">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="249.0" layoutY="236.0" mnemonicParsing="false" onAction="#btnAddItemsOnAction" text="Add Items" textFill="#7b300d">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="231.0" layoutY="296.0" mnemonicParsing="false" onAction="#btnViewAllOrdersOnAction" text="View All Orders" textFill="#7b300d">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
