--- a/src/main/resources/view/AddCustomer.fxml
+++ b/src/main/resources/view/AddCustomer.fxml
@@ -1,14 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Controller.AddCustomerFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="515.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AddCustomerFormController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#793c20" height="68.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="601.0" />
+      <Label layoutX="135.0" layoutY="6.0" text="Add Customer Form" textFill="#ffe8de">
+         <font>
+            <Font name="System Bold" size="38.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtCustomerId" layoutX="27.0" layoutY="144.0" prefHeight="25.0" prefWidth="99.0" promptText="Customer Id...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtCustomerName" layoutX="169.0" layoutY="144.0" promptText="Cutomer Name...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtMobileNumber" layoutX="29.0" layoutY="211.0" promptText="Customer Number...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Label layoutX="27.0" layoutY="120.0" text=" ID">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="201.0" layoutY="83.0" />
+      <Label layoutX="30.0" layoutY="185.0" text="Mobile Number">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="169.0" layoutY="120.0" text="Name">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="355.0" layoutY="118.0" text="Address">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="215.0" layoutY="183.0" text="Email">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtCustomerAddress" layoutX="355.0" layoutY="142.0" prefHeight="25.0" prefWidth="171.0" promptText="Customer Address...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtCustomerEmail" layoutX="215.0" layoutY="209.0" prefHeight="25.0" prefWidth="211.0" promptText="Customer Email...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Label layoutX="27.0" layoutY="86.0" text="Customer Details" textFill="#a13c0d" underline="true">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="27.0" layoutY="279.0" text="Order Details" textFill="#a13c0d" underline="true">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtOrderId" layoutX="183.0" layoutY="335.0" prefHeight="25.0" prefWidth="99.0" promptText="Order Id...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Label layoutX="183.0" layoutY="311.0" text=" Order ID">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="txtCategoryCombo" layoutX="345.0" layoutY="333.0" opacity="0.44" prefWidth="150.0" promptText="Select a Category" />
+      <Label layoutX="346.0" layoutY="309.0" text="Category">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="29.0" layoutY="376.0" text="Items">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="txtItemCombo" layoutX="29.0" layoutY="400.0" opacity="0.44" prefHeight="25.0" prefWidth="211.0" promptText="Select a Item" />
+      <Line endX="465.0" fill="#7a300d" layoutX="135.0" layoutY="265.0" startX="-135.0" />
+      <Button layoutX="466.0" layoutY="205.0" mnemonicParsing="false" onAction="#btnAddCustomerOnAction" text="Add Customer">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <TextField fx:id="txtCustomerIdforOrder" layoutX="27.0" layoutY="336.0" prefHeight="25.0" prefWidth="99.0" promptText="Customer Id...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Label layoutX="27.0" layoutY="312.0" text="Customer ID">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="274.0" layoutY="376.0" text="Quantity">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtQty" layoutX="272.0" layoutY="400.0" prefHeight="25.0" prefWidth="81.0" promptText="Qty...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Label layoutX="402.0" layoutY="375.0" text="Unit Price">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtUnitPrice" layoutX="400.0" layoutY="398.0" prefHeight="25.0" prefWidth="99.0" promptText="Unit Price...">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Button layoutX="466.0" layoutY="446.0" mnemonicParsing="false" onAction="#btnPlaceOrderOnAction" text="Place Order">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
