--- a/src/main/resources/view/AddItems.fxml
+++ b/src/main/resources/view/AddItems.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Controller.AddItemsFormController"
+            fx:controller="controller.AddItemsFormController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
