--- a/src/main/resources/view/HomePage.fxml
+++ b/src/main/resources/view/HomePage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.HomePageFormController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7a300dd9" height="81.0" layoutY="51.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
       <Label layoutX="75.0" layoutY="68.0" text="Cafe Vibe Management System" textFill="WHITE">
