--- a/src/main/resources/view/ViewAllCustomersTable.fxml
+++ b/src/main/resources/view/ViewAllCustomersTable.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ViewAllCustomerTable">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewAllCustomerTable">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#80330f" height="47.0" layoutX="349.0" layoutY="335.0" opacity="0.72" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="238.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a16247" height="47.0" layoutX="354.0" layoutY="335.0" opacity="0.72" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="233.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7a300d" height="68.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="601.0" />
-      <Label layoutX="129.0" layoutY="10.0" text="View All Customers Form" textFill="#e2d0c7">
+      <Label layoutX="155.0" layoutY="9.0" text="All Customers Form" textFill="#e2d0c7">
          <font>
             <Font name="System Bold" size="32.0" />
          </font>
