--- a/src/main/resources/view/AddCustomer.fxml
+++ b/src/main/resources/view/AddCustomer.fxml
@@ -1,163 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="579.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddCustomerFormController">
+<AnchorPane prefHeight="519.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddCustomerFormController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a16247e1" height="48.0" layoutX="27.0" layoutY="510.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="130.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a16247e0" height="48.0" layoutX="302.0" layoutY="510.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="277.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a16247e0" height="48.0" layoutX="273.0" layoutY="254.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="318.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#793c20" height="68.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="601.0" />
-      <Label layoutX="176.0" layoutY="6.0" text="Customer Form" textFill="#ffe8de">
-         <font>
-            <Font name="System Bold" size="38.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtCustomerId" layoutX="27.0" layoutY="144.0" prefHeight="25.0" prefWidth="99.0" promptText="Customer Id...">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="txtCustomerName" layoutX="169.0" layoutY="144.0" promptText="Cutomer Name...">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="txtMobileNumber" layoutX="90.0" layoutY="211.0" promptText="Customer Number...">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <Label layoutX="27.0" layoutY="120.0" text=" ID">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a1614833" height="224.0" layoutX="14.0" layoutY="38.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="574.0" />
+      <Label layoutX="31.0" layoutY="47.0" text=" ID">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
       <Label layoutX="201.0" layoutY="83.0" />
-      <Label layoutX="91.0" layoutY="185.0" text="Mobile Number">
+      <Label layoutX="252.0" layoutY="114.0" text="Mobile Number">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="169.0" layoutY="120.0" text="Name">
+      <Label layoutX="252.0" layoutY="47.0" text="Name">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="355.0" layoutY="118.0" text="Address">
+      <Label layoutX="33.0" layoutY="114.0" text="Address">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="276.0" layoutY="183.0" text="Email">
+      <Label layoutX="33.0" layoutY="184.0" text="Email">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="txtCustomerAddress" layoutX="355.0" layoutY="142.0" prefHeight="25.0" prefWidth="171.0" promptText="Customer Address...">
+      <JFXTextField fx:id="txtCustomerId" layoutX="33.0" layoutY="67.0" promptText="Customer ID" />
+      <JFXTextField fx:id="txtCustomerName" layoutX="252.0" layoutY="68.0" promptText="Customer Name" />
+      <JFXTextField fx:id="txtCustomerAddress" layoutX="33.0" layoutY="138.0" promptText="Customer Address" />
+      <JFXTextField fx:id="txtMobileNumber" layoutX="252.0" layoutY="139.0" promptText="Mobile Number" />
+      <JFXTextField fx:id="txtCustomerEmail" layoutX="33.0" layoutY="205.0" prefHeight="25.0" prefWidth="264.0" promptText="Customer Email" />
+      <JFXButton layoutX="460.0" layoutY="57.0" onAction="#btnAddCustomerOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="ADD" textFill="WHITE">
          <font>
-            <Font name="System Italic" size="12.0" />
+            <Font name="System Bold Italic" size="12.0" />
          </font>
-      </TextField>
-      <TextField fx:id="txtCustomerEmail" layoutX="276.0" layoutY="209.0" prefHeight="25.0" prefWidth="211.0" promptText="Customer Email...">
+      </JFXButton>
+      <JFXButton layoutX="460.0" layoutY="104.0" onAction="#btnUpdateCustomerOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="UPDATE" textFill="WHITE">
          <font>
-            <Font name="System Italic" size="12.0" />
+            <Font name="System Bold Italic" size="12.0" />
          </font>
-      </TextField>
-      <Label layoutX="27.0" layoutY="86.0" text="Customer Details" textFill="#a13c0d" underline="true">
+      </JFXButton>
+      <JFXButton layoutX="460.0" layoutY="154.0" onAction="#btnDeleteCustomerOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="DELETE" textFill="WHITE">
          <font>
-            <Font name="System Bold Italic" size="18.0" />
+            <Font name="System Bold Italic" size="12.0" />
          </font>
-      </Label>
-      <Label layoutX="27.0" layoutY="335.0" text="Order Details" textFill="#a13c0d" underline="true">
+      </JFXButton>
+      <JFXButton layoutX="461.0" layoutY="204.0" onAction="#btnSearchCustomerOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="SEARCH" textFill="WHITE">
          <font>
-            <Font name="System Bold Italic" size="18.0" />
+            <Font name="System Bold Italic" size="12.0" />
          </font>
-      </Label>
-      <TextField fx:id="txtOrderId" layoutX="183.0" layoutY="391.0" prefHeight="25.0" prefWidth="99.0" promptText="Order Id...">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <Label layoutX="183.0" layoutY="367.0" text=" Order ID">
-         <font>
-            <Font name="System Bold Italic" size="14.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="txtCategoryCombo" layoutX="345.0" layoutY="389.0" opacity="0.44" prefWidth="150.0" promptText="Select a Category" />
-      <Label layoutX="346.0" layoutY="365.0" text="Category">
-         <font>
-            <Font name="System Bold Italic" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="29.0" layoutY="432.0" text="Items">
-         <font>
-            <Font name="System Bold Italic" size="14.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="txtItemCombo" layoutX="29.0" layoutY="456.0" opacity="0.44" prefHeight="25.0" prefWidth="211.0" promptText="Select a Item" />
-      <Line endX="465.0" fill="#7a300d" layoutX="135.0" layoutY="319.0" startX="-135.0" />
-      <Button layoutX="288.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnAddCustomerOnAction" text="Add Customer">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Button>
-      <TextField fx:id="txtCustomerIdforOrder" layoutX="27.0" layoutY="392.0" prefHeight="25.0" prefWidth="99.0" promptText="Customer Id...">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <Label layoutX="27.0" layoutY="368.0" text="Customer ID">
-         <font>
-            <Font name="System Bold Italic" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="274.0" layoutY="432.0" text="Quantity">
-         <font>
-            <Font name="System Bold Italic" size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtQty" layoutX="272.0" layoutY="456.0" prefHeight="25.0" prefWidth="81.0" promptText="Qty...">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <Label layoutX="402.0" layoutY="431.0" text="Unit Price">
-         <font>
-            <Font name="System Bold Italic" size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtUnitPrice" layoutX="400.0" layoutY="454.0" prefHeight="25.0" prefWidth="99.0" promptText="Unit Price...">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <Button layoutX="317.0" layoutY="519.0" mnemonicParsing="false" onAction="#btnPlaceOrderOnAction" text="Place Order">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="432.0" layoutY="261.0" mnemonicParsing="false" onAction="#btnViewAllCustomersOnAction" text="View All Customers">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="43.0" layoutY="519.0" mnemonicParsing="false" onAction="#btnHomePageOnAction" text="Home Page">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="445.0" layoutY="518.0" mnemonicParsing="false" onAction="#btnViewAllOedersOnAction" text="View All Orders">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Button>
+      </JFXButton>
+      <TableView fx:id="tblCustomerTable" layoutX="14.0" layoutY="287.0" prefHeight="200.0" prefWidth="574.0">
+        <columns>
+          <TableColumn fx:id="colCustomerId" prefWidth="79.33334064483643" text="ID" />
+          <TableColumn fx:id="colCustomerName" prefWidth="132.66666412353516" text="Name" />
+            <TableColumn fx:id="colCustomerAddress" prefWidth="145.3332977294922" text="Address" />
+            <TableColumn fx:id="colCustomerEmail" prefWidth="223.33340454101562" text="Email" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
