--- a/src/main/resources/view/HomePage.fxml
+++ b/src/main/resources/view/HomePage.fxml
@@ -1,35 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageFormController">
+<AnchorPane prefHeight="464.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageFormController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7a300dd9" height="81.0" layoutY="51.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
-      <Label layoutX="75.0" layoutY="68.0" text="Cafe Vibe Management System" textFill="WHITE">
-         <font>
-            <Font name="System Bold Italic" size="31.0" />
-         </font>
-      </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#782f0dd9" height="221.0" layoutX="100.0" layoutY="152.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="404.0" />
-      <Button layoutX="229.0" layoutY="181.0" mnemonicParsing="false" onAction="#btnAddCustomerOnAction" text="Add Customers" textFill="#7a300d">
-         <font>
-            <Font name="System Bold" size="17.0" />
-         </font>
-      </Button>
-      <Button layoutX="249.0" layoutY="236.0" mnemonicParsing="false" onAction="#btnAddItemsOnAction" text="Add Items" textFill="#7b300d">
-         <font>
-            <Font name="System Bold" size="17.0" />
-         </font>
-      </Button>
-      <Button layoutX="231.0" layoutY="296.0" mnemonicParsing="false" onAction="#btnViewAllOrdersOnAction" text="View All Orders" textFill="#7b300d">
-         <font>
-            <Font name="System Bold" size="17.0" />
-         </font>
-      </Button>
+      <AnchorPane prefHeight="400.0" prefWidth="192.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7d482f" height="606.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="203.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a8765e" height="452.0" layoutX="19.0" layoutY="116.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="168.0" />
+            <JFXButton layoutX="50.0" layoutY="248.0" onAction="#btnAddCustomerOnAction" prefHeight="27.0" prefWidth="115.0" style="-fx-background-color: #7d482f;" text="Customers" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </JFXButton>
+            <JFXButton layoutX="50.0" layoutY="321.0" onAction="#btnAddItemsOnAction" prefHeight="31.0" prefWidth="115.0" style="-fx-background-color: #7d482f;" text="Menu Items" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </JFXButton>
+            <JFXButton layoutX="50.0" layoutY="397.0" onAction="#btnViewAllOrdersOnAction" prefHeight="31.0" prefWidth="115.0" style="-fx-background-color: #7d482f;" text="Orders" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </JFXButton>
+            <JFXButton layoutX="50.0" layoutY="180.0" onAction="#btnViewDashBoardOnAction" prefHeight="27.0" prefWidth="115.0" style="-fx-background-color: #7d482f;" text="DashBoard" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </JFXButton>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a8765e" height="44.0" layoutX="20.0" layoutY="19.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="168.0" />
+            <JFXButton layoutX="50.0" layoutY="472.0" onAction="#btnViewReportOnAction" prefHeight="31.0" prefWidth="115.0" style="-fx-background-color: #7d482f;" text="Reports" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </JFXButton>
+            <Label layoutX="30.0" layoutY="18.0" text="Cafe Vibes" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="30.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="203.0" prefHeight="464.0" prefWidth="535.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7d482f" height="86.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="598.0" />
+            <AnchorPane fx:id="FormViewPane" layoutX="-2.0" layoutY="86.0" prefHeight="520.0" prefWidth="600.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
