--- a/src/main/resources/view/AddItems.fxml
+++ b/src/main/resources/view/AddItems.fxml
@@ -1,10 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.AddItemsFormController"
-            prefHeight="519.0" prefWidth="601.0">
 
+<AnchorPane prefHeight="519.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddItemsFormController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a1604833" height="225.0" layoutX="19.0" layoutY="32.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="563.0" />
+      <JFXTextField fx:id="txtItemCode" focusColor="BLACK" layoutX="46.0" layoutY="101.0" promptText="Code" />
+      <JFXTextField fx:id="txtItemDescription" focusColor="BLACK" layoutX="248.0" layoutY="101.0" promptText="Description" />
+      <JFXTextField fx:id="txtItemPrice" focusColor="BLACK" layoutX="46.0" layoutY="179.0" promptText="Price" />
+      <JFXTextField fx:id="txtItemQuantity" focusColor="BLACK" layoutX="248.0" layoutY="179.0" promptText="Quantity" />
+      <Label layoutX="46.0" layoutY="75.0" text="Item Code">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="248.0" layoutY="75.0" text="Item Description">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="46.0" layoutY="151.0" text="Item Price">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="248.0" layoutY="151.0" text="Item Quantity">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <JFXButton layoutX="448.0" layoutY="57.0" onAction="#btnAddItemOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="ADD" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="448.0" layoutY="104.0" onAction="#btnUpdateItemOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="UPDATE" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="448.0" layoutY="154.0" onAction="#btnDeleteItemOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="DELETE" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="449.0" layoutY="204.0" onAction="#btnSearchItemOnAction" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #793c20;" text="SEARCH" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </JFXButton>
+      <TableView fx:id="tblItem" layoutX="19.0" layoutY="289.0" prefHeight="200.0" prefWidth="563.0">
+        <columns>
+          <TableColumn fx:id="colItemCode" prefWidth="103.33334159851074" text="Item Code" />
+          <TableColumn fx:id="colItemDescription" prefWidth="237.33330535888672" text="Item Description" />
+            <TableColumn fx:id="colItemPrice" prefWidth="120.0" text="Item Price" />
+            <TableColumn fx:id="colItemQuantity" prefWidth="101.33340454101562" text="Item Quantity" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
